update(validate and publish): UI alignment fix

--- a/cx-portal/src/components/shared/basic/ReleaseProcess/ReleaseProcessSteps.scss
+++ b/cx-portal/src/components/shared/basic/ReleaseProcess/ReleaseProcessSteps.scss
@@ -53,8 +53,13 @@
   }
 
   .verify-app-release-card {
-    width: 250px !important;
+    width: 290px !important;
     padding-left: 0px !important;
+    > div:first-child {
+      height: auto !important;
+      min-height: 351.4px !important;
+      margin-bottom: 0 !important;
+    }
   }
 
   .verify-validate-images {
